--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^4.13.4",
     "nodemon": "^1.12.1",
     "socket.io": "^2.0.4"
   }
